src/test/ui/intrinsic-invalid-number-of-arguments.stderr
error[E0441]: unrecognized platform-specific intrinsic function: `x86_mm_movemask_pd`
  --> $DIR/intrinsic-invalid-number-of-arguments.rs:20:5
   |
LL |     fn x86_mm_movemask_pd(x: f64x2, y: f64x2, z: f64x2) -> i32; //~ platform-specific intrinsic
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0441`.
